@startuml
!theme plain
skinparam classAttributeIconSize 0
hide empty members

package excel.model <<Frame>> {
  interface Expression <<interface>>

  class SpreadsheetModel
  class Cell
  class ExpressionBuilder
  class ExcelConverter

  enum CellValue {
    TEXT
    NUMBER
    BOOLEAN
    ERROR
  }

  enum CellError {
    SYNTAX_ERROR
    VALUE_ERROR
    CIRCULAR_REF
  }

  class BinaryArithmeticExpression
  class ComparisonExpression
  class LogicalExpression
  class ReferenceExpression
  class LiteralExpression
  class FunctionExpression

  SpreadsheetModel "1" *-- "0..*" Cell
  Cell --> Expression
  Cell --> CellValue
  Cell --> CellError

  Expression <|.. BinaryArithmeticExpression
  Expression <|.. ComparisonExpression
  Expression <|.. LogicalExpression
  Expression <|.. ReferenceExpression
  Expression <|.. LiteralExpression
  Expression <|.. FunctionExpression

  ExpressionBuilder --> SpreadsheetModel
  ReferenceExpression --> ExcelConverter
  FunctionExpression --> ExcelConverter
}


@enduml